--- a/static/style.css
+++ b/static/style.css
@@ -1,51 +1,63 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,700');
- .logo{
+@import url("https://fonts.googleapis.com/css?family=Oxygen&display=swap");
+
+.logo {
      max-height: 45px;
 }
- html, nav, body{
-     font-family: 'Poppins',sans-serif;
+
+html,
+nav,
+body {
+     font-family: "Oxygen", sans-serif;
 }
- .navbar {
+
+.navbar {
      -webkit-box-shadow: 0 0 150px 0 #999;
      -moz-box-shadow: 0 0 150px 0 #999;
      box-shadow: 0 0 150px 0 #999;
 }
- .footer{
+
+.footer {
      background-color: #3f3f3f;
      color: #d5d5d5;
      padding-top: 2rem;
 }
- hr.light{
+
+hr.light {
      border-top: 1px solid #d5d5d5;
      width: 80%;
 }
- .social a {
+
+.social a {
      font-size: 4.5em;
      padding: 3rem;
 }
+
 /*---Media Queries --*/
- @media (max-width: 992px) {
-}
- @media (max-width: 768px) {
-}
- @media (max-width: 576px) {
-}
+@media (max-width: 992px) {}
+
+@media (max-width: 768px) {}
+
+@media (max-width: 576px) {}
+
 /*---Firefox Bug Fix --*/
- .carousel-item {
+.carousel-item {
      transition: -webkit-transform 0.5s ease;
      transition: transform 0.5s ease;
      transition: transform 0.5s ease, -webkit-transform 0.5s ease;
      -webkit-backface-visibility: visible;
      backface-visibility: visible;
 }
+
 /*--- Fixed Background Image --*/
- figure {
+figure {
      position: relative;
      width: 100%;
      height: 60%;
-     margin: 0!important;
+     margin: 0 !important;
 }
- .fixed-wrap {
+
+.fixed-wrap {
      clip: rect(0, auto, auto, 0);
      position: absolute;
      top: 0;
@@ -53,7 +65,8 @@
      width: 100%;
      height: 100%;
 }
- #fixed {
+
+#fixed {
      background-image: url('img/mac.png');
      position: fixed;
      display: block;
@@ -67,10 +80,12 @@
      transform: translateZ(0);
      will-change: transform;
 }
+
 /*--- Bootstrap Padding Fix --*/
- [class*="col-"] {
+[class*="col-"] {
      padding: 1rem;
 }
+
 /* Extra small (xs) devices (portrait phones, less than 576px) No media query since this is the default in Bootstrap Small (sm) devices (landscape phones, 576px and up) @media (min-width: 576px) {
      ... 
 }
@@ -85,14 +100,15 @@
 }
  */
 /* For Login Buttons*/
- body {
+body {
      padding: 2em;
 }
+
 /* Shared */
- .loginBtn {
+.loginBtn {
      box-sizing: border-box;
      position: relative;
-    /* width: 13em;
+     /* width: 13em;
      - apply for fixed size */
      margin: 0.2em;
      padding: 0 15px 0 46px;
@@ -104,7 +120,8 @@
      font-size: 16px;
      color: #FFF;
 }
- .loginBtn:before {
+
+.loginBtn:before {
      content: "";
      box-sizing: border-box;
      position: absolute;
@@ -113,42 +130,53 @@
      width: 34px;
      height: 100%;
 }
- .loginBtn:focus {
+
+.loginBtn:focus {
      outline: none;
 }
- .loginBtn:active {
-     box-shadow: inset 0 0 0 32px rgba(0,0,0,0.1);
+
+.loginBtn:active {
+     box-shadow: inset 0 0 0 32px rgba(0, 0, 0, 0.1);
 }
+
 /* Facebook */
- .loginBtn--facebook {
+.loginBtn--facebook {
      background-color: #4C69BA;
      background-image: linear-gradient(#4C69BA, #3B55A0);
-    /*font-family: "Helvetica neue", Helvetica Neue, Helvetica, Arial, sans-serif;
+     /*font-family: "Helvetica neue", Helvetica Neue, Helvetica, Arial, sans-serif;
     */
      text-shadow: 0 -1px 0 #354C8C;
 }
- .loginBtn--facebook:before {
+
+.loginBtn--facebook:before {
      border-right: #364e92 1px solid;
      background: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/14082/icon_facebook.png') 6px 6px no-repeat;
 }
- .loginBtn--facebook:hover, .loginBtn--facebook:focus {
+
+.loginBtn--facebook:hover,
+.loginBtn--facebook:focus {
      background-color: #5B7BD5;
      background-image: linear-gradient(#5B7BD5, #4864B1);
 }
+
 /* Google */
- .loginBtn--google {
-    /*font-family: "Roboto", Roboto, arial, sans-serif;
+.loginBtn--google {
+     /*font-family: "Roboto", Roboto, arial, sans-serif;
     */
      background: #DD4B39;
 }
- .loginBtn--google:before {
+
+.loginBtn--google:before {
      border-right: #BB3F30 1px solid;
      background: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/14082/icon_google.png') 6px 6px no-repeat;
 }
- .loginBtn--google:hover, .loginBtn--google:focus {
+
+.loginBtn--google:hover,
+.loginBtn--google:focus {
      background: #E74B37;
 }
- .hovereffect {
+
+.hovereffect {
      width: 100%;
      height: 100%;
      float: left;
@@ -157,7 +185,8 @@
      text-align: center;
      cursor: default;
 }
- .hovereffect .overlay {
+
+.hovereffect .overlay {
      width: 100%;
      position: absolute;
      overflow: hidden;
@@ -170,21 +199,24 @@
      color: #3c4a50;
      -webkit-transition: -webkit-transform 0.35s;
      transition: transform 0.35s;
-     -webkit-transform: translate3d(0,100%,0);
-     transform: translate3d(0,100%,0);
+     -webkit-transform: translate3d(0, 100%, 0);
+     transform: translate3d(0, 100%, 0);
      visibility: hidden;
 }
- .hovereffect img {
+
+.hovereffect img {
      display: block;
      position: relative;
      -webkit-transition: -webkit-transform 0.35s;
      transition: transform 0.35s;
 }
- .hovereffect:hover img {
-     -webkit-transform: translate3d(0,-10%,0);
-     transform: translate3d(0,-10%,0);
+
+.hovereffect:hover img {
+     -webkit-transform: translate3d(0, -10%, 0);
+     transform: translate3d(0, -10%, 0);
 }
- .hovereffect h2 {
+
+.hovereffect h2 {
      text-transform: uppercase;
      color: #fff;
      text-align: center;
@@ -196,7 +228,8 @@
      margin: 0px;
      display: inline-block;
 }
- .hovereffect a.info {
+
+.hovereffect a.info {
      display: inline-block;
      text-decoration: none;
      padding: 7px 14px;
@@ -206,147 +239,236 @@
      margin: 50px 0 0 0;
      background-color: transparent;
 }
- .hovereffect a.info:hover {
+
+.hovereffect a.info:hover {
      box-shadow: 0 0 5px #fff;
 }
- .hovereffect p.icon-links a {
+
+.hovereffect p.icon-links a {
      float: right;
      color: #3c4a50;
      font-size: 1.4em;
 }
- .hovereffect:hover p.icon-links a:hover, .hovereffect:hover p.icon-links a:focus {
+
+.hovereffect:hover p.icon-links a:hover,
+.hovereffect:hover p.icon-links a:focus {
      color: #252d31;
 }
- .hovereffect h2, .hovereffect p.icon-links a {
+
+.hovereffect h2,
+.hovereffect p.icon-links a {
      -webkit-transition: -webkit-transform 0.35s;
      transition: transform 0.35s;
-     -webkit-transform: translate3d(0,200%,0);
-     transform: translate3d(0,200%,0);
+     -webkit-transform: translate3d(0, 200%, 0);
+     transform: translate3d(0, 200%, 0);
      visibility: visible;
 }
- .hovereffect p.icon-links a span:before {
+
+.hovereffect p.icon-links a span:before {
      display: inline-block;
      padding: 8px 10px;
      speak: none;
      -webkit-font-smoothing: antialiased;
      -moz-osx-font-smoothing: grayscale;
 }
- .hovereffect:hover .overlay, .hovereffect:hover h2, .hovereffect:hover p.icon-links a {
-     -webkit-transform: translate3d(0,0,0);
-     transform: translate3d(0,0,0);
+
+.hovereffect:hover .overlay,
+.hovereffect:hover h2,
+.hovereffect:hover p.icon-links a {
+     -webkit-transform: translate3d(0, 0, 0);
+     transform: translate3d(0, 0, 0);
 }
- .hovereffect:hover h2 {
+
+.hovereffect:hover h2 {
      -webkit-transition-delay: 0.05s;
      transition-delay: 0.05s;
 }
- .hovereffect:hover p.icon-links a:nth-child(3) {
+
+.hovereffect:hover p.icon-links a:nth-child(3) {
      -webkit-transition-delay: 0.1s;
      transition-delay: 0.1s;
 }
- .hovereffect:hover p.icon-links a:nth-child(2) {
+
+.hovereffect:hover p.icon-links a:nth-child(2) {
      -webkit-transition-delay: 0.15s;
      transition-delay: 0.15s;
 }
- .hovereffect:hover p.icon-links a:first-child {
+
+.hovereffect:hover p.icon-links a:first-child {
      -webkit-transition-delay: 0.2s;
      transition-delay: 0.2s;
 }
+
 /* * Row with equal height columns * -------------------------------------------------- */
- .row-eq-height {
+.row-eq-height {
      display: -webkit-box;
      display: -webkit-flex;
      display: -ms-flexbox;
      display: flex;
 }
+
 /* * Styles copied from the Grid example to make grid rows & columns visible. */
- .container {
+.container {
      padding-right: 15px;
      padding-left: 15px;
 }
- h4 {
+
+h4 {
      margin-top: 25px;
 }
- .row {
+
+.row {
      margin-bottom: 20px;
 }
- .row .row {
+
+.row .row {
      margin-top: 10px;
      margin-bottom: 0;
 }
- [class*="col-"] {
+
+[class*="col-"] {
      padding-top: 15px;
      padding-bottom: 15px;
      background-color: #eee;
-     background-color: rgba(86,61,124,.15);
+     background-color: rgba(86, 61, 124, .15);
      border: 1px solid #ddd;
-     border: 1px solid rgba(86,61,124,.2);
+     border: 1px solid rgba(86, 61, 124, .2);
 }
+
 /* * Callout styles copied from Bootstrap's main docs. */
 /* Common styles for all types */
- .bs-callout {
+.bs-callout {
      padding: 20px;
      margin: 20px 0;
      border-left: 3px solid #eee;
 }
- .bs-callout h4 {
+
+.bs-callout h4 {
      margin-top: 0;
      margin-bottom: 5px;
 }
- .bs-callout p:last-child {
+
+.bs-callout p:last-child {
      margin-bottom: 0;
 }
- .bs-callout code {
+
+.bs-callout code {
      background-color: #fff;
      border-radius: 3px;
 }
+
 /* Variations */
- .bs-callout-danger {
+.bs-callout-danger {
      background-color: #fdf7f7;
      border-color: #d9534f;
 }
- .bs-callout-danger h4 {
+
+.bs-callout-danger h4 {
      color: #d9534f;
 }
- .bs-callout-warning {
+
+.bs-callout-warning {
      background-color: #fcf8f2;
      border-color: #f0ad4e;
 }
- .bs-callout-warning h4 {
+
+.bs-callout-warning h4 {
      color: #f0ad4e;
 }
- .bs-callout-info {
+
+.bs-callout-info {
      background-color: #f4f8fa;
      border-color: #5bc0de;
 }
- .bs-callout-info h4 {
+
+.bs-callout-info h4 {
      color: #5bc0de;
 }
- .form-signin {
+
+.form-signin {
      width: 100%;
      max-width: 330px;
      padding: 15px;
      margin: 0 auto;
 }
- .form-signin .checkbox {
+
+.form-signin .checkbox {
      font-weight: 400;
 }
- .form-signin .form-control {
+
+.form-signin .form-control {
      position: relative;
      box-sizing: border-box;
      height: auto;
      padding: 10px;
      font-size: 16px;
 }
- .form-signin .form-control:focus {
+
+.form-signin .form-control:focus {
      z-index: 2;
 }
- .form-signin input[type="email"] {
+
+.form-signin input[type="email"] {
      margin-bottom: -1px;
      border-bottom-right-radius: 0;
      border-bottom-left-radius: 0;
 }
- .form-signin input[type="password"] {
+
+.form-signin input[type="password"] {
      margin-bottom: 10px;
      border-top-left-radius: 0;
      border-top-right-radius: 0;
+}
+
+.loginzz {
+     -ms-flex-align: right;
+     -ms-flex-pack: right;
+     -webkit-box-align: right;
+     align-items: right;
+     -webkit-box-pack: right;
+     justify-content: right;
+     margin-top: 10%;
+     margin-bottom: 20%;
+}
+
+.btn-gitlab {
+     background-color: #4060b8;
+     color: white;
+}
+
+.btn-gitlab:hover {
+     background-color: #36446b;
+}
+
+.info {
+     color: #798394;
+}
+
+.form-signin {
+     width: 100%;
+     max-width: 330px;
+     padding: 15px;
+     margin: 0 auto;
+}
+
+.form-signin .checkbox {
+     font-weight: 400;
+}
+
+.form-signin .form-control {
+     position: relative;
+     box-sizing: border-box;
+     height: auto;
+     padding: 10px;
+     font-size: 16px;
+}
+
+.form-signin .form-control:focus {
+     z-index: 2;
+}
+
+@media screen and (max-width: 470px) {
+     .pahs {
+          height: 50px;
+     }
 }
