--- a/templates/index.html
+++ b/templates/index.html
@@ -27,35 +27,42 @@
     <link href="{{ url_for('static', filename='style.css') }}" rel="stylesheet" type="text/css">
     <div class="fixed-top">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="{{ url_for('catList') }}"><img src="https://i.ibb.co/bWDthLc/imageedit-4-9423460446.png" class="logo"></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+            <a class="navbar-brand" href="{{ url_for('catList') }}"><img
+                    src="https://i.ibb.co/bWDthLc/imageedit-4-9423460446.png" class="logo"></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="{{ url_for('catList') }}">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="{{ url_for('catList') }}">Home <span
+                                class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('catList') }}">Pets <span class="sr-only">(catalog)</span></a>
+                        <a class="nav-link" href="{{ url_for('catList') }}">Pets <span
+                                class="sr-only">(catalog)</span></a>
                     </li>
 
                     {% if 'username' in session %}
                     <li class="nav-item dropdown ml-auto">
-                        <a class="nav-link dropdown-toggle navbar-brand" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <img src="{{ session['picture'] }}"
-                        class="rounded-circle" alt="Profile Picture" style="height: 30px; width: 30px;">
-                    </a>
+                        <a class="nav-link dropdown-toggle navbar-brand" href="#" id="navbarDropdownMenuLink"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <img src="{{ session['picture'] }}" class="rounded-circle" alt="Profile Picture"
+                                style="height: 30px; width: 30px;">
+                        </a>
                         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
                             <p class="dropdown-item">Logged in as <strong>{{ session['username'] }}</strong></p>
                             <hr>
-                            <a class="dropdown-item" href="{{ url_for('logout') }}"><i class="fas fa-sign-out-alt text-and-icon"></i>Log out</a>
+                            <a class="dropdown-item" href="{{ url_for('logout') }}"><i
+                                    class="fas fa-sign-out-alt text-and-icon"></i>Log out</a>
                         </div>
                     </li>
                 </ul>
                 {% else %}
-                <a href="{{ url_for('showLogin') }}"><button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Login</button></a> {% endif %}
+                <a href="{{ url_for('showLogin') }}"><button class="btn btn-outline-primary my-2 my-sm-0"
+                        type="submit">Login</button></a> {% endif %}
             </div>
         </nav>
     </div>
@@ -67,7 +74,7 @@
     <footer class="page-footer font-small blue ">
 
         <!-- Copyright -->
-        <div class="footer-copyright text-center py-3">© 2018 Copyright:
+        <div class="footer-copyright text-center py-3">© 2019 Copyright:
             <a href="https://mdbootstrap.com/education/bootstrap/"> PetAdopt.com</a>
         </div>
         <!-- Copyright -->
