--- a/templates/index.html
+++ b/templates/index.html
@@ -75,9 +75,9 @@
 
         <!-- Copyright -->
         <div class="footer-copyright text-center py-3">© 2019 Copyright:
-            <a href="https://mdbootstrap.com/education/bootstrap/"> PetAdopt.com</a>
-        </div>
-        <!-- Copyright -->
+            <a href="#"> PetAdopt</a>
+            <p>Made with ❤️ by <a href="http://twitter.com/harshsahu97" target="_blank" class="harsh">Harsh S.</a></p>
+            <!-- Copyright -->
 
     </footer>
     <!-- Footer -->
